tree-sitter-buff/grammar.js
    source_file: $ => repeat($._declaration),

    _declaration: $ => choice(
      $.function_declaration,
      $.import_declaration,
      $.export_declaration,
      $.enum_declaration,
      $.trait_declaration,
      $.extend_block,
      $.extern_crate_declaration,
    ),

    // =====================================================================
    // Attributes (`@name` / `@name(args)`)
    // =====================================================================

    function_declaration: $ => seq(
      repeat($.attribute),
      optional('unsafe'),
      optional(choice('async', 'extern', seq('extern', 'async'))),
      'func',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    parameter_list: $ => seq('(', commaSep($.parameter), ')'),

    parameter: $ => seq(
      field('name', $.identifier),
      // `self` receiver (no type annotation) — extension-method convention.
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('default', $._expression))),
    ),

    // =====================================================================
    // Blocks: layout (offside rule) or braces
    // =====================================================================

    block: $ => choice($.layout_block, $.brace_block),

    // Layout-sensitive block: `: INDENT stmt+ DEDENT`.
    // The external scanner's INDENT token implicitly consumes the leading
    // newline + indent whitespace (one token), avoiding the need to
    // sequence NEWLINE -> INDENT across two scanner calls.
    layout_block: $ => seq(
      ':',
      $.indent,
      repeat1($._statement),
      $.dedent,
    ),

    // Brace block (rare for control flow in Buff; used for `func` bodies
    // when the user prefers brace style).
    _statement: $ => choice(
      $.let_declaration,
      $.if_statement,
      $.for_statement,
      $.match_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.guard_statement,
      $.defer_statement,
      $.expression_statement,
    ),

    let_declaration: $ => seq(
      'let',
      optional('mut'),
      field('pattern', choice($._pattern)),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
    ),

    if_statement: $ => seq(
      'if',
      $.if_condition,
      repeat(seq(',', $.if_condition)),
      optional(','),
      field('consequence', $.block),
      repeat($.elif_clause),
      optional($.else_clause),
    ),

    if_condition: $ => choice(
      seq('let', field('pattern', $._pattern), '=', field('value', $._expression)),
      field('expression', $._expression),
    ),

    for_statement: $ => seq(
      'for',
      choice(
        seq(field('variable', $.identifier), 'in', field('iterator', $._expression)),
        seq('let', field('pattern', $._pattern), '=', field('value', $._expression)),
        field('condition', $._expression),
      ),
      field('body', $.block),
    ),

    return_statement: $ => choice(
      seq('return', field('value', $._expression)),
      prec(-1, 'return'),
    ),

    break_statement: $ => 'break',
    continue_statement: $ => 'continue',

    expression_statement: $ => $._expression,

    // =====================================================================
    // Enum declarations
    // =====================================================================

    _type: $ => $.type_expression,

    type_expression: $ => choice(
      $.named_type,
      $.generic_type,
      $.tuple_type,
      $.union_type,
    ),

    named_type: $ => choice($.type_identifier, $.identifier),

    tuple_type: $ => seq(
      '(',
      $._type,
      ',',
      commaSep1($._type),
      ')',
    ),

    _expression: $ => choice(
      $.assignment_expression,
      $.binary_expression,
      $.unary_expression,
      $.range_expression,
      $.call_expression,
      $.method_call_expression,
      $.field_access_expression,
      $.index_expression,
      $.try_expression,
      $.null_conditional_expression,
      $.primary_expression,
    ),

    assignment_expression: $ => prec.right(PREC.assignment, seq(
      field('left', $._expression),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=')),
      field('right', $._expression),
    )),

    binary_expression: $ => choice(
      ...[
        ['+', PREC.additive], ['-', PREC.additive],
        ['*', PREC.multiplicative], ['/', PREC.multiplicative], ['%', PREC.multiplicative],
        ['==', PREC.equality], ['!=', PREC.equality],
        ['<', PREC.comparison], ['>', PREC.comparison], ['<=', PREC.comparison], ['>=', PREC.comparison],
        ['&&', PREC.logical_and],
        ['||', PREC.logical_or],
        ['&', PREC.bitwise_and],
        ['|', PREC.bitwise_or],
        ['^', PREC.bitwise_xor],
        ['<<', PREC.shift], ['>>', PREC.shift],
        ['|>', PREC.pipeline],
      ].map(([op, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._expression),
          // Trick: use literal-as-field for clarity
          field('operator', op),
          field('right', $._expression),
        )),
      ),
    ),

    call_expression: $ => prec(PREC.postfix, seq(
      field('function', $._expression),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      commaSep(choice($.named_argument, $._expression)),
      ')',
    ),

    method_call_expression: $ => prec(PREC.postfix + 1, seq(
      field('receiver', $._expression),
      '.',
      field('method', $.identifier),
      field('arguments', $.argument_list),
    )),

    field_access_expression: $ => prec(PREC.postfix, seq(
      field('object', $._expression),
      '.',
      field('field', $.identifier),
    )),

    primary_expression: $ => choice(
      $.literal,
      $.identifier,
      $.parenthesized_expression,
      $.tuple_expression,
      $.array_expression,
      $.map_expression,
      $.closure_expression,
      $.struct_init,
      $.if_expression,
      $.spawn_expression,
    ),

    array_expression: $ => seq(
      '[',
      commaSep($._expression),
      ']',
    ),

    // `{:}` empty map OR `{k: v, ...}` non-empty.
    // Closures `{x => ...}` and struct-init `Type { ... }` disambiguate by shape.
    spawn_expression: $ => seq(
      'spawn',
      field('task', $._expression),
    ),

    // =====================================================================
    // Patterns (match arms, let-destructuring, if-let, guard-let)
    // =====================================================================

    _pattern: $ => choice(
      $.wildcard_pattern,
      $.identifier_pattern,
      $.variant_pattern,
      $.struct_pattern,
      $.tuple_pattern,
      $.literal_pattern,
      $.negative_int_pattern,
    ),

    identifier_pattern: $ => $.identifier,

    struct_pattern: $ => seq(
      field('name', $.identifier),
      '{',
      commaSep($.struct_pattern_field),
      '}',
    ),

    struct_pattern_field: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('pattern', $._pattern))),
    ),

    tuple_pattern: $ => seq(
      '(',
      commaSep($._pattern),
      ')',
    ),

    literal: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string,
      $.boolean,
      $.char_literal,
    ),

    integer_literal: $ => token(/[0-9][0-9_]*/),

    string: $ => seq(
      '"',
      repeat(choice(
        $.string_fragment,
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    string_fragment: $ => token.immediate(prec(1, /[^"\\\{\n]+/)),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,

    // Convention: types use PascalCase (uppercase first letter). This is the
    // standard Rust/Buff naming convention and lets the grammar cleanly
    // disambiguate `Foo { ... }` (struct init) from `if c { ... }` or
    // `match x { ... }` (block bodies) by lexical means.
